--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "client": "0.0.1",
+    "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
@@ -21,7 +22,8 @@
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.16.3",
     "morgan": "^1.9.1",
-    "pg": "^7.9.0"
+    "pg": "^7.9.0",
+    "request-cookies": "^1.1.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.10"
